# memoryweave

./: .codebuffignore  .gitignore  .pre-commit-config.yaml  BASELINE_COMPARISON.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  ROADMAP_PROGRESS.md  baseline_comparison.md  baselines_config.yaml  benchmark_enhanced_retrieval.py  benchmark_memory_retrievers.py  benchmark_nlp_extraction.py  benchmark_results.json  demo_memory_recall.py  hybrid_nlp_extraction_plan.md  knowledge.md  migration-plan.md  pyproject.toml  pytest.ini  readme.md  renovate.json5  roadmap.md  ruff.toml  run_baseline_comparison.py  run_benchmark.py  run_contextual_fabric_benchmark.sh  run_semantic_benchmark.py  run_synthetic_benchmark.py  sample_baseline_dataset.json  test_art_memory.py  test_confidence_thresholding.py  test_large_memory_clustering.py  test_nlp_extraction.py  test_with_orca.py  test_with_tinyllama.py  (+1 more)
.github/workflows/: ci.yml
benchmarks/: README.md  __init__.py  advanced_retrieval_benchmark.py  base.py  contextual_fabric_benchmark.py  memory_retrieval_benchmark.py  retrieval_benchmark.py  run_all_benchmarks.py  visualize_contextual_fabric.py
benchmarks/configs/: contextual_fabric_benchmark.yaml  memory_retrieval_benchmark.yaml
benchmarks/utils/: calc.py
configs/: synthetic_benchmark.yaml
datasets/: enhanced_evaluation.json  evaluation_queries.json
demos/: demo_enhanced_retrieval.py  demo_memory_recall.py
diagnostic_output/: embedding_analysis.json  query_classification.json  summary_report.json  threshold_optimization.json
diagnostic_output/embedding_quality/: clustering_quality.json  inter_set_similarity.json  intra_set_similarity.json  query_retrieval.json  summary.json
diagnostic_results_20250227_215926/: analyze_embedding_quality_output.txt  diagnostic_analysis_output.txt  diagnostic_report.html  diagnostic_report.json
docs/: DEPRECATED_CODE_REMOVAL.md  DEVELOPMENT_PRIORITIES.md  MIGRATION_GUIDE.md  NEXT_STEPS.md  REFACTORING_SUMMARY.md  api_reference.md  architecture.md  benchmark_guide.md  deprecated_code_removal.md  development-roadmap.md  feature_matrix.md  implementation_constraints.md  next_steps.md  plan_for_improvement.md  refactoring.md  refactoring_progress.md  usage_guide.md
docs/examples/: category_management_example.py  memory_encoding_example.py
evaluations/: ram_benchmark.py  stress_test.py
evaluations/conflicts/: conflict_test.py  debug_weight_test.py  temporal_conflict_test.py
evaluations/performance/: improved_ram_benchmark.py  memory_performance_compare.py  needle_in_haystack.py  ram_benchmark.py
examples/: ann_performance_example.py  ann_vector_store_test.py  baseline_comparison_example.py  migration_example.py  real_world_evaluation.py  visualize_results.py
examples/ann/: README.md  performance_example.py  vector_store_test.py
examples/llm/: README.md  benchmark_scenario.py  comparative_memory_benchmark.py  (+8 more)
memoryweave/: __init__.py  knowledge.md  refactoring.md  retriever.py
nlp_exp/: knowledge.md  test_nlp_extraction.py
notebooks/: README.md  benchmark_enhanced_retrieval.py  benchmark_memory.py  benchmark_memory_retrievers.py  benchmark_nlp_extraction.py  benchmark_public_memory_retrievers.py  evaluate_memory.py  test_art_memory.py  test_category_consolidation.py  test_confidence_thresholding.py  test_dynamic_vigilance.py  test_large_memory_clustering.py  test_memory.py  test_with_orca.py  test_with_tinyllama.py
scripts/: analyze_embedding_quality.py  analyze_problematic_queries.py  analyze_similarity_distributions.py  diagnostic_analysis.py  enhanced_retrieval.py  migrate_legacy_code.py  run_diagnostic_analysis.py  test_enhanced_retrieval.py  test_optimized_retrieval.py  test_scaling_performance.py
tests/: README.md  knowledge.md  run_tests.py
(+251 files in other folders)
