[project]
name = "memoryweave"
version = "0.1.0"
description = "A contextual fabric approach to LLM memory management inspired by biological memory systems"
readme = "readme.md"
authors = [
    { name = "jamestexas", email = "18285880+jamestexas@users.noreply.github.com" },
]
license-files = ["LICENSE"]
keywords = ["memory", "transformers", "nlp", "memoryweave"]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "blis>=1.2.0",
    "faiss-cpu>=1.10.0",
    "hdbscan>=0.8.40",
    "huggingface-hub>=0.29.1",
    "ipython>=9.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pydantic>=2",
    "rich>=13.9.4",
    "rich-click>=1.8.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentence-transformers>=3.4.1",
    "spacy>=3.7.0",
    "thinc>=8.3.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "whoosh>=2.7.4",
    "pyyaml>=6.0.0",
    "rank-bm25>=0.2.2",
]
[project.scripts]
memoryweave = "memoryweave:main"


[tool.setuptools]
package-data = { "memoryweave" = ["LICENSE"] }

py-modules = ['memoryweave']
[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
# Source download for small spacy model in English
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }


# TODO: Review and update the dev deps as this project is in flux and the dependencies are likely to change
[dependency-groups]
dev = [
    "datasets>=3.3.2",
    "en-core-web-sm",
    "ipython>=9.0.0",
    "mdformat-ruff>=0.1.3",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "radon>=6.0.1",
    "rich-click>=1.8.6",
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
